--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
+<main>
 <body>
     <div class="header">
         <h1><a href="https://www.google.com">gOoGLe</a></h1>
@@ -27,5 +28,6 @@
         <footer>BCHY</footer>
     </div>
 </body>
+</main>
 
 </html>
