--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 </head>
 
 <main>
-<body>
     <div class="header">
         <h1><a href="https://www.google.com">gOoGLe</a></h1>
     </div>
     <div class="content">
         <div class="image"> 
-            <img src="1.jpg" alt="Photo 1" width="150" height="150"></a>
-            <img src="2.jpg" alt="Photo 2" width="150" height="150"></a>
-            <img src="3.jpg" alt="Photo 3" width="150" height="150"></a>
+            <img src="1.jpg" alt="Photo 1" width="150" height="150">
+            <img src="2.jpg" alt="Photo 2" width="150" height="150">
+            <img src="3.jpg" alt="Photo 3" width="150" height="150">
         </div>
         <p>This is a paragraph.</p>
         <ul>
@@ -27,7 +26,7 @@
         </ul>
         <footer>BCHY</footer>
     </div>
-</body>
 </main>
 
 </html>
+
